2008-07-03 Albert Chu <chu11@llnl.gov>

	* ipmi-chassis/ipmi-chassis.8.pre.in: Update some text.
	
	* libfreeipmi/include/freeipmi/cmds/ipmi-device-global-cmds.h: Add
	"NO_CHANGE" macros.

	* bmc-device/: Support --get-acpi-power-state.

	* libfreeipmi/src/api/ipmi-device-global-cmds.c
	(ipmi_cmd_set_acpi_power_state): Fix parameter check bug.

	* bmc-device/: Support --set-acpi-power-state.

	* bmc-config/src/: Output lan authentication enables fields
	dependent on authentication support fields.

	* configure.ac: Get getpwuid_r portability bug.

2008-07-01 Albert Chu <chu11@llnl.gov>

	* bmc-device/bmc-device.8.pre.in: Tweak text.

	* libfreeipmi/include/freeipmi/cmds/ipmi-device-global-cmds.h,
	libfreeipmi/src/cmds/ipmi-device-global-cmds.c,
	libfreeipmi/include/api/ipmi-device-global-cmds-api.h,
	libfreeipmi/src/api/ipmi-device-global-cmds-api.c: Support Get
	Self Test Results IPMI command.

	* bmc-device/: Support get self test results.
	
	* libfreeipmi/include/freeipmi/cmds/ipmi-device-global-cmds.h,
	libfreeipmi/src/cmds/ipmi-device-global-cmds.c,
	libfreeipmi/include/api/ipmi-device-global-cmds-api.h,
	libfreeipmi/src/api/ipmi-device-global-cmds-api.c: Support Set and Get
	ACPI power state commands.

2008-06-22 Albert Chu <chu11@llnl.gov>

	* man/: New dir.  Move manpages from doc/ into man/.
	
2008-06-21 Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-faq.texi: Add various HPC notes.

	* Fix compiler warnings.
	
2008-06-21 Albert Chu <chu11@llnl.gov>

	* Audit and cleanup header file usage throughout (i.e. use correct
	#ifs, proper commenting for GNU style, etc.).
	
2008-06-20 Albert Chu <chu11@llnl.gov>

	* common/src/portability/: New directory.

	* common/src/: Moved to portability files to
	common/src/portability/.

	* common/src/toolcommon/: New directory.

	* common/src/: Moved to toolcommon files to
	common/src/toolcommon/.

	* common/src/miscutil/: New directory.

	* common/src/: Moved to miscutil files to common/src/miscutil/.
